--- a/guide.html
+++ b/guide.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Streaming Guide</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div class="container">
+  <h2>Streaming Upload Recommendations</h2>
+  <select>
+    <option>Twitch</option>
+    <option>YouTube</option>
+    <option>Kick</option>
+    <option>Facebook</option>
+  </select>
+  <p>Recommended upload: 4.5 – 6 Mbps</p>
+  <p>Suggested headroom: 30%</p>
+</div>
+</body>
+</html>
 
