--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Network Performance Test</title>
+  <title>Network Performance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -21,32 +21,31 @@
 <main class="container">
 
   <section class="info-panel">
-    <div><span>IP:</span> <span id="ip">Loading…</span> <button id="ipToggle">Hide</button></div>
-    <div><span>ISP:</span> <span id="isp">—</span></div>
-    <div><span>Location:</span> <span id="loc">—</span></div>
+    <div>
+      <span>IP</span>
+      <span id="ip">Hidden</span>
+      <button id="ipToggle">Show</button>
+    </div>
+    <div><span>ISP</span><span id="isp">—</span></div>
+    <div><span>Location</span><span id="loc">—</span></div>
   </section>
 
   <section class="speed-panel">
-
-    <div class="meter">
-      <div class="label">DOWNLOAD</div>
-      <div class="speed" id="download">0.00</div>
-      <div class="unit">Mbps</div>
+    <div class="gauge">
+      <canvas id="speedometer" width="260" height="160"></canvas>
+      <div class="speed-readout">
+        <div id="speedValue">0.0</div>
+        <span>Mbps</span>
+      </div>
+      <div class="mode" id="mode">DOWNLOAD</div>
     </div>
-
-    <div class="meter">
-      <div class="label">UPLOAD</div>
-      <div class="speed" id="upload">0.00</div>
-      <div class="unit">Mbps</div>
-    </div>
-
   </section>
 
   <section class="action-panel">
     <button id="startTest" class="primary-btn">Start Test</button>
     <div class="metrics">
-      <div>Ping: <span id="ping">—</span> ms</div>
-      <div>Jitter: <span id="jitter">—</span> ms</div>
+      <div>Ping <span id="ping">—</span> ms</div>
+      <div>Jitter <span id="jitter">—</span> ms</div>
     </div>
   </section>
 
