--- a/guide.html
+++ b/guide.html
@@ -6,17 +6,27 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<header class="top-bar">
+  <a href="index.html" class="secondary-btn">← Back</a>
+</header>
+
 <div class="container">
-  <h2>Streaming Upload Recommendations</h2>
-  <select>
+  <h2>Streaming Upload Guidelines</h2>
+
+  <select class="secondary-btn">
     <option>Twitch</option>
     <option>YouTube</option>
     <option>Kick</option>
     <option>Facebook</option>
   </select>
-  <p>Recommended upload: 4.5 – 6 Mbps</p>
-  <p>Suggested headroom: 30%</p>
+
+  <div class="info-panel" style="margin-top:20px">
+    <div>Recommended Upload: 4.5 – 6 Mbps</div>
+    <div>Headroom: 30%</div>
+    <div>Keyframe Interval: 2s</div>
+  </div>
 </div>
+
 </body>
 </html>
-
