--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Network Performance Test</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -25,10 +25,8 @@
 
   <section class="meter-box">
     <canvas id="meter" width="360" height="220"></canvas>
-
     <div class="live-read">
-      <div id="liveSpeed">0.0</div>
-      <span>Mbps</span>
+      <div id="liveSpeed">0.0</div><span> Mbps</span>
       <small id="phase">Idle</small>
     </div>
   </section>
@@ -40,16 +38,17 @@
   <section class="final hidden" id="final">
     <div>
       <h3>DOWNLOAD</h3>
-      <p id="finalDown">0</p><span>Mbps</span>
+      <p id="finalDown">0</p><span> Mbps</span>
     </div>
     <div>
       <h3>UPLOAD</h3>
-      <p id="finalUp">0</p><span>Mbps</span>
+      <p id="finalUp">0</p><span> Mbps</span>
     </div>
   </section>
 
 </main>
 
+<script src="js/speedtest.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
